# ragdocling

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  TEST_SUMMARY.md  alembic.ini  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0001_init_from_models.py
playground/: collections.ipynb  pipeline.ipynb  workspaces.ipynb
src/dacke/: app.py  main.py
src/dacke/application/: exceptions.py
src/dacke/application/ports/: dispatcher.py  embedder.py  extractor.py  handler.py  publisher.py  repository.py  reranker.py  transformer.py  usecase.py
src/dacke/controllers/: __init__.py  artifact.py  collection.py  pipeline.py  workspace.py
src/dacke/domain/: exceptions.py
src/dacke/domain/aggregates/: artifact.py  collection.py  document.py  pipeline.py  workspace.py
src/dacke/domain/entities/: attachment.py  chunk.py  embedding.py
src/dacke/domain/events/: __init__.py  artifact.py  domain.py
src/dacke/domain/values/: artifact.py  attachment.py  chunk.py  collection.py  document.py  embedding.py  extraction.py  pipeline.py  retrieval.py  transformer.py  workspace.py
src/dacke/dto/: __init__.py  artifact.py  collection.py  pipeline.py  retrieve.py  workspace.py
src/dacke/infrastructure/: bus.py  config.py  dependencies.py  exceptions.py
src/dacke/infrastructure/celery/: app.py
src/dacke/infrastructure/pipeline/: embedder.py  extractor.py  registry.py  reranker.py
src/dacke/infrastructure/utility/: logging.py
tests/: conftest.py
tests/integration/: conftest.py  test_collection_endpoints.py  test_pipeline_endpoints.py  test_workspace_endpoints.py
tests/unit/application/: test_cleanup_handler.py  test_convert_handler.py  test_retrieve_usecase.py
tests/unit/domain/aggregates/: test_pipeline.py  test_workspace.py
tests/unit/domain/entities/: test_artifact.py  test_collection.py
tests/unit/domain/values/: test_ids.py  test_metadata.py  test_storage.py
tests/unit/infrastructure/: test_embedder.py  test_event_bus.py  test_reranker.py  test_retrieve_dto.py
tests/unit/infrastructure/repositories/: test_blob_repository.py  test_collection_repository.py  (+3 more)
(+32 files in other folders)
